--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<!-- StackOverflow. n.d. Split Div Into 2 Columns Using CSS. Accessed online:
 							hhttps://stackoverflow.com/questions/1964297/split-div-into-2-columns-using-css [11 January 2023] -->
 				   <img id="photo" 
-						src="https://media.licdn.com/dms/image/C4D03AQG2un3X7PIlNA/profile-displayphoto-shrink_800_800/0/1652615518120?e=1678924800&v=beta&t=vo-WhB2eSbVif2COeAS1Mi4LDrGNCwY5T-gBncIg41E"
+						src="Images/Image2.jpg"
 						alt="Image cannot be viewed."
 						/>
 
@@ -105,6 +105,7 @@
 									<li>Java</li>
 									<li>Structured Query Language</li>
 									<li>Hyper Text Markup Language</li>
+									<li>Machine Learning</li>
 								</ul>
 						</div>
 					</div>
@@ -131,14 +132,15 @@
 					</p>
 
 				<h4>2022-2023</h4>
-					<p>Completed a 6 month part-time online software engineering course where I learnt Python and Java. I also learnt how to create and work with databases as well as some front-end development skills. I compeleted several projects, which helped me put my newfound knowledge into practice.
+					<p>Completed a 6 month part-time online software engineering course where I learnt Python and Java. I also learnt some basic front-end development skills, how to create and work with databases as well as some machine learning concepts. I compeleted several projects, which helped me put my newfound knowledge into practice.
 					The Python projects had various applications, namely calculating the interest on an investment or a home loan repayment amount, a project management system and a stock taking system. The Java programs were written with the common goal of implementing a project management system. However, the first employs object-oriented programming (OOP) and the second uses structured query language (SQL).
-					<a href = "#contactMe">Contact me<a/> to request access to my private <a href="https://github.com/JessBossau?tab=repositories">GitHub repositories.</a>
+					<a href = "#contactMe">Contact me</a> to request access to my private <a href="https://github.com/JessBossau?tab=repositories">GitHub repositories</a> or view my HyperionDev <a href="https://www.hyperiondev.com/portfolio/93528/">portfolio.</a>
+					
 					</p>
 
 			<h3>Work Experience</h3>
-				<h4>DeltaV Aerospace 2021 - present</h4>
-					<p>I have applied my vibration knowledge, which I gained from my master’s degree, to investigate the vibration of aerospace designs. Vibration data is primarily post processed using Octave/Matlab scripts. I also perform Finite element Analysis (FEA) simulations on structural components of design projects. The FEAs approximate the natural frequencies and mode shapes of the designed structures. The maximum design loads are also applied in the FEAs to determine the total deformation and the maximum stresses and strains that could arise. The design of components can then be optimized to improve functionality and minimize structural failures.
+				<h4>DeltaV Aerospace 2021-2023</h4>
+					<p>I have applied my vibration knowledge, which I gained from my master’s degree, to investigate the vibration of aerospace designs. Vibration data was primarily post processed using Octave/Matlab scripts. I also performed Finite element Analysis (FEA) simulations on structural components of design projects. The FEAs approximate the natural frequencies and mode shapes of the designed structures. The maximum design loads are also applied in the FEAs to determine the total deformation and the maximum stresses and strains that could arise. The design of components can then be optimized to improve functionality and minimize structural failures.
 					</p>
 		</div>		
 
